--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,8 +11,8 @@ body {
     margin: 1.66%;
     border-radius: 12%;
     transition: background 0.6s;
-    --webkit-transition: background 0.6s;
-    -moz-transition: background 0.6s;
+    /* --webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s; */
 }
 #container {
     max-width: 600px;
@@ -51,8 +51,8 @@ button {
     letter-spacing: 1px;
     font-size: inherit;
     transition: all 0.6s;
-    --webkit-transition: all 0.6s;
-    -moz-transition: all 0.6s;
+    /* transition: all 0.6s;
+    transition: all 0.6s; */
     outline: none;
 }
 #message {
